# smc-rw-linux

./: Cargo.toml  README.md  build.rs  build_compact_binary.sh  install.sh
src/: main.rs  main_test.rs  smc_rw.c
