[package]
name = "smc_rw"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
libc = "0.2"
once_cell = "1.20.2"

[dev-dependencies]
mockall = "0.13.1"

[build-dependencies]
cc = "1.0"

[profile.release]
# opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
